--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
     <aside class="nav-sidebar">
         <ul>
-            <li><span>G-SHOW</span></li>
+            <li><span>A-SHOW</span></li>
             <li><a href="">Create An Account</a></li>
             <li><a href="#">Upload Your Work</a></li>
             <li><a href="#">Showroom</a></li>
