--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li><a href="#">Upload Your Work</a></li>
             <li><a href="#">Showroom</a></li>
             <li><a href="#">View And Purchase</a></li>
-            <li><a href="#">More Loading...</a></li>
+            <li><a href="#">More ...</a></li>
             
         </ul>
 
