--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><span>A-SHOW</span></li>
             <li><a href="">Create An Account</a></li>
             <li><a href="#">Upload Your Work</a></li>
-            <li><a href="#">Showroom</a></li>
+            <li><a href="#">ShowRoom</a></li>
             <li><a href="#">View And Purchase</a></li>
             <li><a href="#">More ...</a></li>
             
